tweak showcase spacing, fix pianote html

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html {
-	min-width: 745px;
+	min-width: 1000px;
 }
 
 body {
