--- a/showcase.css
+++ b/showcase.css
@@ -30,16 +30,19 @@
 }
 
 #showcase-item {
- 	display: flex;
+	display: flex;
+	position: relative;
 
 	padding: 20px;
-	margin-left: 60px;
-	padding-right: 100px;
+	margin-left: auto;
+	margin-right: auto;
+
+	width: 900px;
 }
 
 #showcase-disclosure-indicator {
-	position: absolute;
-	right: 40px;
+	display: none;
+	right: 0px;
 	height: 20px;
 
 	font-weight: 500;
@@ -60,7 +63,7 @@
 	height: 120px;
 
     vertical-align: middle;
-	border-radius: 20px;
+	border-radius: 30px;
 	margin-top: 40px;
 
 	-webkit-transition: all .2s ease-in-out;
@@ -72,15 +75,15 @@
 }
 
 #showcase-item p {
-	margin-left: 20px;
-	margin-top: 40px;
+	margin-left: 30px;
+	margin-top: 45px;
 }
 
 #showcase-text {
 	float: left;
 	width: 400px;
 
-	text-align: center;
+	text-align: left;
 	font-size: 22px;
 	font-weight: 300;
 }
@@ -90,22 +93,22 @@
 	width: 150px;
 
 	margin-top: 0px;
-	padding-left: 20px;
+	padding-left: 10px;
 
-	text-align: right;
+	text-align: left;
 	font-size: 20px;
-	font-weight: 400;
+	font-weight: 500;
 }
 
 #showcase-availability {
 	float: right;
-	width: 150px;
+	width: 100px;
 
 	margin-top: 0px;
-	padding-left: 10px;
-	padding-right: 40px;
+	padding-left: 0px;
+	padding-right: 0px;
 
-	text-align: right;
+	text-align: left;
 	font-size: 20px;
 	font-weight: 300;
 }
